<resources>
    <string name="app_name">EX News</string>
    <string name="APP_PACKAGE_NAME">com.ace.vlog</string>
    <string name="DESCRIPTION">free daily news headlines</string>
    <string name="GET_STARTED">Get Started</string>
    <string name="LIVE_CHAT">Support</string>
    <string name="EMAIL_US">Email Us</string>
    <string name="RATE_APP">Rate App</string>
    <string name="FOLLOW_US">Follow Us</string>
    <string name="AD">Ad</string>
    <string name="FEED">Article</string>
    <string name="SPONSORED">Sponsored</string>
    <string name="SAVED">Saved</string>
    <string name="READ_ORIGINAL">More</string>
    <string name="REFRESHING">Refreshing</string>
    <string name="WELCOME">Welcome To News</string>
    <string name="NOTIFICATIONS">Notifications</string>
    <string name="REWARDED_ADUNIT_ID">ca-app-pub-754598636172314/3783392872</string>
    <string name="NATIVE_ADUNIT_ID">ca-app-pub-7545958636172314/5267332109</string>
    <string name="INSTALLER_ERROR">Please download apk from the playstore</string>
    <string name="NO_NEW_NOTIFICATION">No new notification</string>
    <string name="NO_SAVED_ARTICLES">No saved articles</string>
    <string name="OUTDATED">This version is no longer supported, please upgrade to a newer version</string>
    <string name="GOT_IT">Got it</string>
    <string name="RATE_US">Rate Us</string>
    <string name="SHARE">Share</string>
    <string name="EXIT">Exit</string>
    <string name="USERNAME">username</string>
    <string name="PASSWORD">Password</string>
    <string name="CONTINUE_WITHOUT_SIGNIN">Don\'t sign in</string>
    <string name="HASH">#</string>
    <string name="YOU_ARE_OFFLINE">You\'re offline</string>
    <string name="CONNECTION_LOST">Connection Lost</string>
    <string name="PLAYSTORE">Visit Play Store</string>
    <string name="RATE">Rate</string>
    <string name="LATER">Later</string>
    <string name="NEVER">Hide Dialog</string>
    <string name="REVIEW_MESSAGE">Like our app? yay..\nwhy not give us 5 stars in our in app review?</string>
    <string name="CHANNEL_DESCRIPTION">News default notification channel</string>
    <string name="INSTAGRAM">com.instagram.android</string>
</resources>
