<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/WELCOME"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ubuntu"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/DESCRIPTION"
        android:textColor="@color/colorHint"
        android:textSize="12sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorHint"
        android:layout_marginTop="70dp"
        app:counterTextColor="@color/colorHint"
        app:counterEnabled="true"
        app:counterMaxLength="12">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_label_background"
        android:layout_gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        android:hint="@string/USERNAME"
        android:textColorHint="@color/colorHint"
        android:fontFamily="@font/opensans"
        android:textColor="@color/colorTxtInverse"
        android:maxLength="12"
        android:singleLine="true"
        android:textSize="13sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorHint"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorTint">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_label_background"
        android:paddingTop="12dp"
        android:paddingBottom="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:textColorHint="@color/colorHint"
        android:hint="@string/PASSWORD"
        android:textColor="@color/colorTxtInverse"
        android:fontFamily="@font/opensans"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="13sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStarted"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/GET_STARTED"
        android:background="@drawable/btn_selector"
        android:layout_marginTop="70dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dontSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/CONTINUE_WITHOUT_SIGNIN"
        android:textColor="@color/colorHint"
        android:textStyle="bold"/>

</LinearLayout>
